--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -26,9 +26,10 @@
       {% endfor %}
     {% endif %}
 
+
     <div class="form-group mb-3">
-      <label for="username" class="form-label">Nome de Usuário</label>
-      <input type="text" name="username" id="username" required class="form-control">
+      <label for="email" class="form-label">E-mail</label>
+      <input type="email" name="email" id="email" required class="form-control" placeholder="seuemail@gmail.com">
     </div>
 
     <div class="form-group mb-4">
